--- a/deploy/crds.yaml
+++ b/deploy/crds.yaml
@@ -675,15 +675,14 @@ spec:
                     description: AllowedAddresses specifies IPAddresses or CIDR blocks
                       to the allow list for accessing the NGINX Plus API.
                     items:
-                      description: Address is a struct that specifies address type
-                        and value.
+                      description: NginxPlusAllowAddress is a struct that specifies
+                        address type and value.
                       properties:
                         type:
                           description: Type specifies the type of address.
                           enum:
                           - CIDR
                           - IPAddress
-                          - Hostname
                           type: string
                         value:
                           description: Value specifies the address value.
@@ -692,9 +691,6 @@ spec:
                       - type
                       - value
                       type: object
-                      x-kubernetes-validations:
-                      - message: Address Type must be either CIDR or IPAddress
-                        rule: (self.type=='CIDR' || self.type=='IPAddress')
                     type: array
                 type: object
               rewriteClientIP:
@@ -736,8 +732,8 @@ spec:
                       Sets NGINX directive set_real_ip_from: https://nginx.org/en/docs/http/ngx_http_realip_module.html#set_real_ip_from
                       This field is required if mode is set.
                     items:
-                      description: Address is a struct that specifies address type
-                        and value.
+                      description: RewriteClientIPAddress is a struct that specifies
+                        address type and value.
                       properties:
                         type:
                           description: Type specifies the type of address.
