--- a/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
+++ b/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
@@ -90,8 +90,8 @@ spec:
                     description: AllowedAddresses specifies IPAddresses or CIDR blocks
                       to the allow list for accessing the NGINX Plus API.
                     items:
-                      description: NginxPlusAllowAddress is a struct that specifies
-                        address type and value.
+                      description: NginxPlusAllowAddress specifies the address type
+                        and value for an NginxPlus allow address.
                       properties:
                         type:
                           description: Type specifies the type of address.
@@ -147,8 +147,8 @@ spec:
                       Sets NGINX directive set_real_ip_from: https://nginx.org/en/docs/http/ngx_http_realip_module.html#set_real_ip_from
                       This field is required if mode is set.
                     items:
-                      description: RewriteClientIPAddress is a struct that specifies
-                        address type and value.
+                      description: RewriteClientIPAddress specifies the address type
+                        and value for a RewriteClientIP address.
                       properties:
                         type:
                           description: Type specifies the type of address.
