CP/DP Split: Support basic NGINX OSS provisioning
This commit updates the control plane to deploy an NGINX data plane when a valid Gateway resource is created. When the Gateway is deleted or becomes invalid, the data plane is removed. The NginxProxy resource has been updated with numerous configuration options related to the k8s deployment and service configs, which the control plane will apply to the NGINX resources when set. The control plane fully owns the NGINX deployment resources, so users who want to change any configuration must do so using the NginxProxy resource.

This does not yet support NGINX Plus or NGINX debug mode. Those will be added in followup pull requests. This also adds some basic daemonset fields, but does not yet support deploying a daemosnet. That will also be added soon.

--- a/charts/nginx-gateway-fabric/templates/clusterrole.yaml
+++ b/charts/nginx-gateway-fabric/templates/clusterrole.yaml
@@ -7,14 +7,25 @@ metadata:
 rules:
 - apiGroups:
   - ""
+  - apps
+  resources:
+  - secrets
+  - configmaps
+  - serviceaccounts
+  - services
+  - deployments
+  verbs:
+  - create
+  - update
+  - delete
+  - list
+  - get
+  - watch
+- apiGroups:
+  - ""
   resources:
   - namespaces
-  - services
-  - secrets
   - pods
-{{- if .Values.nginxGateway.gwAPIExperimentalFeatures.enable }}
-  - configmaps
-{{- end }}
   verbs:
   - get
   - list
@@ -135,4 +146,6 @@ rules:
   - {{ include "nginx-gateway.scc-name" . }}
   verbs:
   - use
+  - create
+  - watch
 {{- end }}
