--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.nginx.config }}
 apiVersion: gateway.nginx.org/v1alpha2
 kind: NginxProxy
 metadata:
@@ -7,5 +6,25 @@ metadata:
   labels:
   {{- include "nginx-gateway.labels" . | nindent 4 }}
 spec:
+  {{- if .Values.nginx.config }}
   {{- toYaml .Values.nginx.config | nindent 2 }}
-{{- end }}
+  {{- end }}
+  kubernetes:
+    {{- if eq .Values.nginx.kind "deployment" }}
+    deployment:
+      replicas: {{ .Values.nginx.replicas }}
+      {{- if .Values.nginx.pod }}
+      pod:
+        {{- toYaml .Values.nginx.pod | nindent 8 }}
+      {{- end }}
+      container:
+        {{- if .Values.nginx.container }}
+          {{- toYaml .Values.nginx.container | nindent 8 }}
+        {{- end }}
+        image:
+          {{- toYaml .Values.nginx.image | nindent 10 }}
+    {{- end }}
+    {{- if .Values.nginx.service }}
+    service:
+      {{- toYaml .Values.nginx.service | nindent 6 }}
+    {{- end }}
