--- a/examples/helm/aws-nlb/values.yaml
+++ b/examples/helm/aws-nlb/values.yaml
@@ -1,7 +1,8 @@
 nginxGateway:
   name: nginx-gateway
-service:
-  type: LoadBalancer
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "external"
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+nginx:
+  service:
+    type: LoadBalancer
+    annotations:
+      service.beta.kubernetes.io/aws-load-balancer-type: "external"
+      service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
