--- a/charts/nginx-gateway-fabric/templates/deployment.yaml
+++ b/charts/nginx-gateway-fabric/templates/deployment.yaml
@@ -36,6 +36,14 @@ spec:
         - --gatewayclass={{ .Values.nginxGateway.gatewayClassName }}
         - --config={{ include "nginx-gateway.config-name" . }}
         - --service={{ include "nginx-gateway.fullname" . }}
+        {{- if .Values.nginx.imagePullSecret }}
+        - --nginx-docker-secret={{ .Values.nginx.imagePullSecret }}
+        {{- end }}
+        {{- if .Values.nginx.imagePullSecrets }}
+          {{- range .Values.nginx.imagePullSecrets }}
+        - --nginx-docker-secret={{ . }}
+          {{- end }}
+        {{- end }}
         {{- if .Values.nginx.plus }}
         - --nginx-plus
           {{- if .Values.nginx.usage.secretName }}
