--- a/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
+++ b/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
@@ -79,6 +79,11 @@ spec:
                         description: Container defines container fields for the NGINX
                           container.
                         properties:
+                          debug:
+                            default: false
+                            description: Debug enables debugging for NGINX by using
+                              the nginx-debug binary.
+                            type: boolean
                           image:
                             description: Image is the NGINX image to use.
                             properties:
