--- a/deploy/default/deploy.yaml
+++ b/deploy/default/deploy.yaml
@@ -301,6 +301,7 @@ spec:
   kubernetes:
     deployment:
       container:
+        debug: false
         image:
           pullPolicy: Always
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
