--- a/deploy/openshift/deploy.yaml
+++ b/deploy/openshift/deploy.yaml
@@ -311,6 +311,7 @@ spec:
   kubernetes:
     deployment:
       container:
+        debug: false
         image:
           pullPolicy: Always
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
