--- a/deploy/snippets-filters-nginx-plus/deploy.yaml
+++ b/deploy/snippets-filters-nginx-plus/deploy.yaml
@@ -306,6 +306,7 @@ spec:
   kubernetes:
     deployment:
       container:
+        debug: false
         image:
           pullPolicy: Always
           repository: private-registry.nginx.com/nginx-gateway-fabric/nginx-plus
