--- a/deploy/snippets-filters/deploy.yaml
+++ b/deploy/snippets-filters/deploy.yaml
@@ -304,6 +304,7 @@ spec:
   kubernetes:
     deployment:
       container:
+        debug: false
         image:
           pullPolicy: Always
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
