CP/DP split: Support nginx debug mode when provisioning Data Plane (#3147)
Support nginx debug mode when provisioning the Data Plane.

Problem: We want to have the option to provision nginx instances in debug mode.

Solution: Add debug field to NginxProxy CRD. Also user can set debug field when installing through Helm by setting the nginx.debug flag.

--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -23,6 +23,9 @@ spec:
         {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
+        {{- if .Values.nginx.debug }}
+        debug: {{ .Values.nginx.debug }}
+        {{- end }}
     {{- end }}
     {{- if .Values.nginx.service }}
     service:
