--- a/deploy/azure/deploy.yaml
+++ b/deploy/azure/deploy.yaml
@@ -200,7 +200,7 @@ spec:
     spec:
       containers:
       - args:
-        - static-mode
+        - controller
         - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
         - --gatewayclass=nginx
         - --config=nginx-gateway-config
