--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -21,7 +21,7 @@ nginxGateway:
   # -- Set of custom annotations for the NGINX Gateway Fabric pods.
   podAnnotations: {}
 
-  # -- Labels to be added to the controller Deployment
+  # -- Set of labels to be added for NGINX Gateway Fabric deployment.
   labels: {}
 
   # -- Set of custom annotations for GatewayClass objects.
