--- a/charts/nginx-gateway-fabric/templates/scc.yaml
+++ b/charts/nginx-gateway-fabric/templates/scc.yaml
@@ -1,9 +1,10 @@
-# TODO(sberman): will need an SCC for nginx ServiceAccounts as well.
 {{- if .Capabilities.APIVersions.Has "security.openshift.io/v1/SecurityContextConstraints" }}
 kind: SecurityContextConstraints
 apiVersion: security.openshift.io/v1
 metadata:
   name: {{ include "nginx-gateway.scc-name" . }}
+  labels:
+  {{- include "nginx-gateway.labels" . | nindent 4 }}
 allowPrivilegeEscalation: false
 allowHostDirVolumePlugin: false
 allowHostIPC: false
@@ -36,4 +37,45 @@ requiredDropCapabilities:
 - ALL
 volumes:
 - secret
+---
+kind: SecurityContextConstraints
+apiVersion: security.openshift.io/v1
+metadata:
+  name: {{ include "nginx-gateway.scc-name" . }}-nginx
+  labels:
+  {{- include "nginx-gateway.labels" . | nindent 4 }}
+allowHostDirVolumePlugin: false
+allowHostIPC: false
+allowHostNetwork: false
+allowHostPID: false
+allowHostPorts: false
+allowPrivilegedContainer: false
+readOnlyRootFilesystem: true
+runAsUser:
+  type: MustRunAsRange
+  uidRangeMin: 101
+  uidRangeMax: 101
+fsGroup:
+  type: MustRunAs
+  ranges:
+  - min: 1001
+    max: 1001
+supplementalGroups:
+  type: MustRunAs
+  ranges:
+  - min: 1001
+    max: 1001
+seLinuxContext:
+  type: MustRunAs
+seccompProfiles:
+- runtime/default
+allowedCapabilities:
+- NET_BIND_SERVICE
+requiredDropCapabilities:
+- ALL
+volumes:
+- emptyDir
+- secret
+- configMap
+- projected
 {{- end }}
