--- a/deploy/openshift/deploy.yaml
+++ b/deploy/openshift/deploy.yaml
@@ -175,11 +175,22 @@ rules:
   - security.openshift.io
   resourceNames:
   - nginx-gateway-scc
+  - nginx-gateway-scc-nginx
   resources:
   - securitycontextconstraints
   verbs:
   - use
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - roles
+  - rolebindings
+  verbs:
   - create
+  - update
+  - delete
+  - list
+  - get
   - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -272,6 +283,7 @@ spec:
         - --metrics-port=9113
         - --health-port=8081
         - --leader-election-lock-name=nginx-gateway-leader-election
+        - --nginx-scc=nginx-gateway-scc-nginx
         env:
         - name: POD_NAMESPACE
           valueFrom:
@@ -442,6 +454,10 @@ fsGroup:
   type: MustRunAs
 kind: SecurityContextConstraints
 metadata:
+  labels:
+    app.kubernetes.io/instance: nginx-gateway
+    app.kubernetes.io/name: nginx-gateway
+    app.kubernetes.io/version: edge
   name: nginx-gateway-scc
 readOnlyRootFilesystem: true
 requiredDropCapabilities:
@@ -463,3 +479,87 @@ users:
 - system:serviceaccount:nginx-gateway:nginx-gateway
 volumes:
 - secret
+---
+allowHostDirVolumePlugin: false
+allowHostIPC: false
+allowHostNetwork: false
+allowHostPID: false
+allowHostPorts: false
+allowPrivilegeEscalation: false
+allowPrivilegedContainer: false
+apiVersion: security.openshift.io/v1
+fsGroup:
+  ranges:
+  - max: 1001
+    min: 1001
+  type: MustRunAs
+kind: SecurityContextConstraints
+metadata:
+  labels:
+    app.kubernetes.io/instance: nginx-gateway
+    app.kubernetes.io/name: nginx-gateway
+    app.kubernetes.io/version: edge
+  name: nginx-gateway-scc-cert-generator
+readOnlyRootFilesystem: true
+requiredDropCapabilities:
+- ALL
+runAsUser:
+  type: MustRunAsRange
+  uidRangeMax: 101
+  uidRangeMin: 101
+seLinuxContext:
+  type: MustRunAs
+seccompProfiles:
+- runtime/default
+supplementalGroups:
+  ranges:
+  - max: 1001
+    min: 1001
+  type: MustRunAs
+users:
+- system:serviceaccount:nginx-gateway:nginx-gateway-cert-generator
+volumes:
+- projected
+---
+allowHostDirVolumePlugin: false
+allowHostIPC: false
+allowHostNetwork: false
+allowHostPID: false
+allowHostPorts: false
+allowPrivilegedContainer: false
+allowedCapabilities:
+- NET_BIND_SERVICE
+apiVersion: security.openshift.io/v1
+fsGroup:
+  ranges:
+  - max: 1001
+    min: 1001
+  type: MustRunAs
+kind: SecurityContextConstraints
+metadata:
+  labels:
+    app.kubernetes.io/instance: nginx-gateway
+    app.kubernetes.io/name: nginx-gateway
+    app.kubernetes.io/version: edge
+  name: nginx-gateway-scc-nginx
+readOnlyRootFilesystem: true
+requiredDropCapabilities:
+- ALL
+runAsUser:
+  type: MustRunAsRange
+  uidRangeMax: 101
+  uidRangeMin: 101
+seLinuxContext:
+  type: MustRunAs
+seccompProfiles:
+- runtime/default
+supplementalGroups:
+  ranges:
+  - max: 1001
+    min: 1001
+  type: MustRunAs
+volumes:
+- emptyDir
+- secret
+- configMap
+- projected
