fix functional tests and add unit tests

--- a/tests/suite/manifests/clientsettings/invalid-route-csp.yaml
+++ b/tests/suite/manifests/clientsettings/invalid-route-csp.yaml
@@ -12,7 +12,7 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /coffee
+        value: /invalid
       headers:
       - name: host_name
         value: v2
