update handler to recieve status update for gateways

--- a/examples/cafe-example/cafe-routes.yaml
+++ b/examples/cafe-example/cafe-routes.yaml
@@ -6,6 +6,8 @@ spec:
   parentRefs:
   - name: gateway
     sectionName: http
+  - name: gateway3
+    sectionName: http
   hostnames:
   - "cafe.example.com"
   rules:
@@ -24,6 +26,8 @@ metadata:
 spec:
   parentRefs:
   - name: gateway
+    sectionName: http
+  - name: gateway3
     sectionName: http
   hostnames:
   - "cafe.example.com"
