CP/DP Split: Support configuring NodePorts
Problem: Now that the control plane provisions the NGINX Service, users can't set specific NodePorts values.

Solution: Allow users to specify NodePorts in the helm chart (globally) and in the NginxProxy resource.

--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -29,5 +29,7 @@ spec:
     {{- end }}
     {{- if .Values.nginx.service }}
     service:
-      {{- toYaml .Values.nginx.service | nindent 6 }}
+      {{- with .Values.nginx.service }}
+      {{- include "filterEmptyFields" . | nindent 6 }}
+      {{- end }}
     {{- end }}
