--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -367,10 +367,12 @@ nginx:
   #             value:
   #               type: string
   # @schema
-  # -- The configuration for the data plane that is contained in the NginxProxy resource. This is applied globally to all Gateways.
+  # -- The configuration for the data plane that is contained in the NginxProxy resource. This is applied globally to all Gateways
+  # managed by this instance of NGINX Gateway Fabric.
   config: {}
 
-  # -- The pod configuration for the NGINX data plane pod. This is applied globally to all Gateways.
+  # -- The pod configuration for the NGINX data plane pod. This is applied globally to all Gateways managed by this
+  # instance of NGINX Gateway Fabric.
   pod: {}
     # -- The termination grace period of the NGINX data plane pod.
     # terminationGracePeriodSeconds: 30
@@ -391,7 +393,8 @@ nginx:
     # nginx.container.extraVolumeMounts mount additional volumes to the container.
     # extraVolumes: []
 
-  # -- The container configuration for the NGINX container. This is applied globally to all Gateways.
+  # -- The container configuration for the NGINX container. This is applied globally to all Gateways managed by this
+  # instance of NGINX Gateway Fabric.
   container: {}
     # -- The resource requirements of the NGINX container.
     # resources: {}
@@ -402,7 +405,8 @@ nginx:
     # -- extraVolumeMounts are the additional volume mounts for the NGINX container.
     # extraVolumeMounts: []
 
-  # -- The service configuration for the NGINX data plane. This is applied globally to all Gateways.
+  # -- The service configuration for the NGINX data plane. This is applied globally to all Gateways managed by this
+  # instance of NGINX Gateway Fabric.
   service:
     # @schema
     # enum:
