feat: helm schema

--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -241,13 +241,19 @@ nginx:
     # Must exist in the same namespace that the NGINX Gateway Fabric control plane is running in (default namespace: nginx-gateway).
     clientSSLSecretName: ""
 
+  # -- The hostPort configuration
   hostPort:
-    ## Enables hostPort.
+    # -- Enables hostPort.
     enable: false
 
-    ## The hostPort configuration for NGINX.
+    # @schema
+    # type: integer
+    # minimum: 1
+    # maximum: 65535
+    # @schema
+    # -- The port configuration for NGINX.
     port: 443
-  
+
   # @schema
   # type: object
   # properties:
